2009-12-06  Shinichiro Hamaji  <hamaji@chromium.org>

        Unreviewed. Revert r51748.

        Bugzilla should show images in git patches
        https://bugs.webkit.org/show_bug.cgi?id=31395

        * PrettyPatch/PrettyPatch.rb:

2009-12-06  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by David Kilzer.

        Bugzilla should show images in git patches
        https://bugs.webkit.org/show_bug.cgi?id=31395

        Show images in git patches using git-apply.

        * PrettyPatch/PrettyPatch.rb:

2009-10-23  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Roben.

        PrettyPatch should show images even when they have the wrong mime type
        https://bugs.webkit.org/show_bug.cgi?id=29506

        * PrettyPatch/PrettyPatch.rb:

2009-10-17  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Eric Carlson.

        https://bugs.webkit.org/show_bug.cgi?id=30470
        Make marking a bug as duplicate easier

        * js/field.js: (setResolutionToDuplicate): Focus the edit field, too.

2009-10-16  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Mark Rowe.

        https://bugs.webkit.org/show_bug.cgi?id=30470
        Make marking a bug as duplicate easier

        * js/field.js: (setResolutionToDuplicate): Show edit field right away, don't make the user
        click again.

2009-09-09  David Kilzer  <ddkilzer@apple.com>

        Update data/params parameters

        * data/params: Updated 'attachment_base' parameter for secure
        attachments.  Updated 'mybugstemplate' parameter to search for
        bugs in UNCONFIRMED, ASSIGNED and REOPENED status in addition to
        NEW status.

2009-08-11  David Kilzer  <ddkilzer@apple.com>

        Updated data/params parameter

        * data/params: Updated 'loginnetmask' parameter to allow users
        to choose whether their cookies are restricted to a single IP
        address or not.

2009-07-07  David Kilzer  <ddkilzer@apple.com>
